[gd_scene load_steps=8 format=3 uid="uid://bgom2ohnp8qvy"]

[ext_resource type="Texture2D" uid="uid://dsgv7h8p6lo58" path="res://assets/sprites/utilities/key.png" id="1_eeh2p"]
[ext_resource type="Script" path="res://utilities/actives/key.gd" id="1_xe8g4"]
[ext_resource type="AudioStream" uid="uid://bbcso17w5alv0" path="res://assets/audios/sfx/key-catch.wav" id="3_afunr"]

[sub_resource type="Animation" id="Animation_8t88j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ovwyj"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 4), Vector2(0, -4), Vector2(0, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ma5cn"]
_data = {
"RESET": SubResource("Animation_8t88j"),
"idle": SubResource("Animation_ovwyj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_yd4y5"]
radius = 24.0

[node name="Key" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 0
script = ExtResource("1_xe8g4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_eeh2p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ma5cn")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yd4y5")

[node name="KeyCatch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_afunr")
volume_db = 24.0
pitch_scale = 1.25
bus = &"Sfx"

[node name="TimerKill" type="Timer" parent="."]
wait_time = 0.96

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerKill" to="." method="_on_timer_timeout"]
